--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Authors, American -- 19th century -- Biography'
 - !lcsh 'Maine -- Description and travel'
 - !lcsh 'Thoreau, Henry David, 1817-1862 -- Travel -- Maine'
+- GITenberg
 title: "The Maine Woods\r\nThe Writings of Henry David Thoreau, Volume 03 (of 20)"
 url: http://www.gutenberg.org/ebooks/42500
